add navigation menu

--- a/index.html
+++ b/index.html
@@ -4,8 +4,19 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Audio Video Tag</title>
+  <link rel="stylesheet" href="nav.css">
 </head>
 <body>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="form.html">Form</a></li>
+        <li><a href="blog.html">Blog</a></li>
+        <li><a href="index.html">Index</a></li>
+        <li><a href="table.html">table</a></li>
+      </ul>
+    </nav>
+  </header>
   <!--audio Tag-->
   <audio src="audio/Alan Walker - Faded (Lyrics)(MP3_160K).mp3" controls></audio>
   <br>
