--- a/table.html
+++ b/table.html
@@ -14,9 +14,22 @@
       border-collapse: collapse;
     }
   </style>
+  <link rel="stylesheet" href="nav.css">
 </head>
 <body>
-  <h3>Table list</h3>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="form.html">Form</a></li>
+        <li><a href="blog.html">Blog</a></li>
+        <li><a href="index.html">Index</a></li>
+        <li><a href="table.html">table</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <main>
+    <h3>Table list</h3>
   <table>
     <caption>Emplory Salary Caption</caption>
     <thead>
@@ -60,5 +73,6 @@
       </tr>
     </tfoot>
   </table>
+  </main>
 </body>
 </html>
