--- a/form.html
+++ b/form.html
@@ -10,9 +10,19 @@
       margin-bottom: 13px;
     }
   </style>
+  <link rel="stylesheet" href="nav.css">
 </head>
 <body>
-  <header></header>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="form.html">Form</a></li>
+        <li><a href="blog.html">Blog</a></li>
+        <li><a href="index.html">Index</a></li>
+        <li><a href="table.html">table</a></li>
+      </ul>
+    </nav>
+  </header>
 
   <main>
     <fieldset>
