correnction in file path

--- a/blog.html
+++ b/blog.html
@@ -29,7 +29,7 @@
     </header>
 
     <figure>
-      <img width="600px" src="image/441356206_1588586225271712_6603420683707179302_n.jpg" alt="Cat Image">
+      <img width="600px" src="./image/441356206_1588586225271712_6603420683707179302_n.jpg" alt="Cat Image">
       <figcaption>Caption : Cat is my emmotion</figcaption>
     </figure>
 
